<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="sign_in">Sign In</string>
    <string name="let_s_sign_you_again">Let’s Sign you again.</string>
    <string name="welcome_back_nyou_have_been_missed">Welcome back,\nYou have been missed !</string>
    <string name="e_mail">E-mail</string>
    <string name="or">Or</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_btn_txt">Sign - In</string>
    <string name="or_sign_in_with">Or, Sign-in with</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign-Up</string>
    <string name="next">Next</string>
    <string name="enter_6_digit_verification_code_sent_to_your_phone">Enter 6 digit verification code sent to your phone</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="profile_page">Profile Page</string>
    <string name="upload_photo">Upload photo</string>
    <string name="user_id">User Id*</string>
    <string name="name">Name*</string>
    <string name="gender">Gender</string>
    <string name="contact_details">Contact Details</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password_compulsory">Password*</string>
    <string name="email_address_without_hiphen">Email Address</string>
    <string name="enter_your_registered_email_below_to_receive_password_reset_instruction">Enter your registered email below to receive password reset instruction</string>
    <string name="back_to_login">Back to login</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="forgot_password_no_que">Forgot Password</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">Your new password must be different from previously used password</string>
    <string name="sign_up_with_below_options">Sign Up With Below Options</string>
    <string name="_91">+91</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="camera">camera</string>
    <string name="notification">notification</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loop">LOOP</string>
    <string name="unfollow">Unfollow</string>
    <string name="report">Report</string>
    <string name="share_to">Share to...</string>
    <string name="hide">Hide</string>
    <string name="Search">Search</string>
    <string name="why_are_you_reporting_this_post">Why are you reporting this post?</string>
    <string name="it_s_spam">It’s Spam?</string>
    <string name="false_information">False Information?</string>
    <string name="i_just_don_t_like_it">I just don’t like it?</string>
    <string name="search_by_username">Search by Username</string>
    <string name="search_by">Search by #</string>
    <string name="search_result">Search result</string>
    <string name="Notification">Notification</string>
    <string name="New">New</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="Profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="Home">Home</string>
    <string name="video">Video</string>
    <string name="pics">Pics</string>
    <string name="edit">Edit</string>
    <string name="User_Id">User Id</string>
    <string name="Name">Name</string>
    <string name="jenny_watsaon">Jenny watsaon</string>
    <string name="female">Female</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="email_address">Email Address</string>
    <string name="dummy_gmail_com">dummy@gmail.com</string>
    <string name="save">Save</string>
    <string name="my_profile">My Profile</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="add_comment">Add comment...</string>
    <string name="comment">Comment</string>
    <string name="new_post">New Post</string>
    <string-array name="category">
        <item>"Choose Category"</item>
    </string-array>
</resources>