<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_176sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/more_pop_up_bg">

    <TextView
        android:id="@+id/myProfileTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/hDiv1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myProfileTv" />

    <TextView
        android:id="@+id/termsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/terms_of_use"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv1" />

    <View
        android:id="@+id/hDiv2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsTv" />

    <TextView
        android:id="@+id/privacyPolicyTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv2" />

    <View
        android:id="@+id/hDiv3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacyPolicyTv" />

    <TextView
        android:id="@+id/aboutTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv3" />

    <View
        android:id="@+id/hDiv4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTv" />

    <TextView
        android:id="@+id/logoutTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv4" />


</androidx.constraintlayout.widget.ConstraintLayout>