<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_176sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/more_pop_up_bg">

    <TextView
        android:id="@+id/unfollowTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/unfollow"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/hDiv1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfollowTv" />

    <TextView
        android:id="@+id/reportTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv1" />

    <View
        android:id="@+id/hDiv2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportTv" />

    <TextView
        android:id="@+id/shareToTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/share_to"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv2" />

    <View
        android:id="@+id/hDiv3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#383740"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shareToTv" />

    <TextView
        android:id="@+id/hideTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:padding="@dimen/_16sdp"
        android:text="@string/hide"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDiv3" />


</androidx.constraintlayout.widget.ConstraintLayout>