<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:paddingTop="@dimen/_16sdp"
    tools:context=".fragment.ProfileFragment">

    <TextView
        android:id="@+id/profileTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/lexendregular"
        android:text="@string/Profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toStartOf="@+id/settingsIv"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/profileTv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settingsIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileImgCv"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTv"
        app:strokeColor="@color/accentColor"
        app:strokeWidth="@dimen/_2sdp">

        <ImageView
            android:id="@+id/profileIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/profile_page_img" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/lexendregular"
        android:text="Leslie@123"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImgCv" />

    <LinearLayout
        android:id="@+id/profileInfoHll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTv">

        <LinearLayout
            android:id="@+id/Vll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="+4590"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/postsLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="@string/posts"
                android:textColor="#A6A8AA"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Vll2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="5145"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/followingLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="@string/following"
                android:textColor="#A6A8AA"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Vll3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followersTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="6897"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/followersLabelTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/lexendregular"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="#A6A8AA"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profilePageTbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileInfoHll"
        app:tabBackground="@drawable/profile_tab_bg"
        app:tabIndicatorColor="@color/accentColor"
        app:tabIndicatorGravity="top"
        app:tabIndicatorHeight="@dimen/_1sdp"
        app:tabSelectedTextColor="@color/accentColor"
        app:tabTextAppearance="@style/myTabTextStyle"
        app:tabTextColor="#8D8E91">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pics" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/profileVp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePageTbl" />


</androidx.constraintlayout.widget.ConstraintLayout>